{
    "name": "InputPrefs",
    "maps": [
        {
            "name": "Touch",
            "id": "8768805d-c805-4e0e-a79a-68c79fe52d4f",
            "actions": [
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "feacffe8-d038-4e17-be42-2abdde34cd10",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ForwardMoveStarted",
                    "type": "PassThrough",
                    "id": "4af80590-9a4b-4e0c-a6c0-5f444af6c1bf",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ForwardMoveEnded",
                    "type": "PassThrough",
                    "id": "98728b31-8a8f-443d-8e0d-a0e922af7e21",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPosition",
                    "type": "Value",
                    "id": "895c8968-beda-4e58-980a-a854e0e4af9e",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "7038a283-f23e-464d-855b-c864cfff9ff9",
                    "path": "<Touchscreen>/Press",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "ForwardMoveStarted",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3d7fbd7a-71dd-4838-9400-51d97767ad98",
                    "path": "<Touchscreen>/Press",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "ForwardMoveEnded",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a00bcbf3-1e08-4f4d-8d22-eefce68c4a10",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e047d96c-f73e-4cda-bace-f29118df0010",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}